# SOrd2025a_pipeline-mini

./: README.md  deploy.yml  inventory.ini  pyproject.toml
.github/workflows/: cicd.yaml
host_vars/: setonix.pawsey.org.au.yaml
pipeline_mini/: cfg.py  job_batch.py  jobs.json  jobs.py  slurm.py  start.py
